# orion

./: .gitignore  .rust-analyzer.json  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  appveyor.yml  cobertura.xml  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit_check.yml  code_coverage.yml  daily_tests.yml  lints.yml  security_audit.yml  temp_nightly_tests.yml  test.yml  workflow_audit.yml
benches/: bench.rs
examples/: aead.rs  kdf.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blake2b.rs  blake2b_compare.rs  chacha20.rs  chacha20_compare.rs  chacha20_poly1305.rs  chacha20_poly1305_compare.rs  chacha_compare.rs  cshake.rs  cshake_compare.rs  default.rs  hchacha20.rs  high_level_api.rs  hkdf.rs  hkdf_expand.rs  hmac.rs  hmac_pad_key_blocks.rs  pbkdf2.rs  pbkdf2_function_f.rs  poly1305.rs  poly1305_compare.rs  ring_compare.rs  sha512.rs  sha512_compare.rs  sp800_185_compare.rs  util.rs  xchacha20.rs  xchacha20_compare.rs  xchacha20_poly1305.rs  xchacha20_poly1305_compare.rs
src/: aead.rs  auth.rs  const_newtypes.rs  default.rs  endianness.rs  errors.rs  functions.rs  hash.rs  hkdf.rs  hltypes.rs  hmac.rs  kdf.rs  keys.rs  lib.rs  options.rs  pbkdf2.rs  pwhash.rs  secret_stream.rs  typedefs.rs  util.rs
src/core/: errors.rs  mod.rs  options.rs  util.rs
src/default/: aead.rs  kdf.rs  mac.rs  mod.rs  pwhash.rs
src/errors/: mod.rs
src/generics/: data.rs  keytype.rs  mod.rs
src/hazardous/: aead.rs  base.rs  chacha.rs  chacha20.rs  constants.rs  cshake.rs  hkdf.rs  hmac.rs  kmac.rs  mod.rs  pbkdf2.rs  poly1305.rs
src/hazardous/aead/: chacha20poly1305.rs  (+4 more)
src/high_level/: aead.rs  auth.rs  hash.rs  hltypes.rs  kdf.rs  kex.rs  mod.rs  pwhash.rs
src/pbkdf2-test-vectors/: pbkdf2-sha2-test-vector-generation.py
src/test_framework/: aead_interface.rs  base_interface.rs  hpke_interface.rs  incremental_interface.rs  kem_interface.rs  mod.rs  streamcipher_interface.rs  xof_interface.rs
src/tests/: custom_hkdf.rs  custom_pbkdf2.rs  make.py  make_nist_hmac.py  mod.rs  nist_hmac.rs  nonofficial_cshake.rs  official_cshake.rs  other_hkdf.rs  other_hmac.rs  rfc_hkdf.rs  rfc_hmac.rs  rfc_pbkdf2.rs
src/util/: endianness.rs  mod.rs  u32x4.rs  u64x4.rs
src/utilities/: errors.rs  mod.rs  util.rs
tests/: boringssl_chacha20_poly1305.rs  custom_hkdf.rs  mod.rs  nist_hmac.rs  official_cshake.rs  other_chacha20.rs  other_hkdf.rs  other_poly1305.rs  rfc_aead_chacha20_poly1305.rs  rfc_chacha20.rs  rfc_hmac.rs  wycheproof_chacha20_poly1305.rs
tests/aead/: boringssl_chacha20_poly1305.rs  boringssl_tests.rs  boringssl_xchacha20_poly1305.rs  mod.rs  other_aead_xchacha20_poly1305.rs  other_xchacha20_poly1305.rs  pynacl_streaming_aead.rs  rfc_aead_chacha20_poly1305.rs  rfc_chacha20_poly1305.rs  wycheproof_aead.rs  wycheproof_chacha20_poly1305.rs
tests/cae/: ctx_test_vectors.rs  mod.rs
tests/ecc/: mod.rs  wycheproof_x25519.rs
tests/hash/: blake2b_kat.rs  mod.rs  other_blake2b.rs  sha256_nist_cavp.rs  sha384_nist_cavp.rs  sha3_224_nist_cavp.rs  sha3_256_nist_cavp.rs  sha3_384_nist_cavp.rs  sha3_512_nist_cavp.rs  sha512_nist_cavp.rs  shake128_nist_cavp.rs  shake256_nist_cavp.rs
tests/hpke/: hpke_test_kats.rs  mod.rs
tests/kdf/: custom_hkdf.rs  custom_pbkdf2.rs  mod.rs  other_argon2.rs  other_argon2i.rs  other_hkdf.rs  pynacl_argon2i.rs  ref_argon2i.rs  rfc_pbkdf2.rs  wycheproof_hkdf.rs  wycheproof_pbkdf2.rs
tests/kem/: mod.rs  xwing_draft.rs
tests/mac/: boringssl_poly1305.rs  mod.rs  nist_cavp_hmac.rs  nist_hmac.rs  other_poly1305.rs  rfc_hmac.rs  rfc_poly1305.rs  wycheproof_hmac.rs  wycheproof_hmac_sha512.rs
tests/stream/: mod.rs  other_chacha20.rs  other_hchacha20.rs  rfc_chacha20.rs  rfc_xchacha20.rs
tests/test_data/: SHA512LongMsg_fmt.txt  SHA512ShortMsg_fmt.txt  Wycheproof_ChaCha20_Poly1305_fmt.txt  blake2-kat_fmt.txt  boringssl_chacha20_poly1305_fmt.txt  boringssl_poly1305_fmt.txt  boringssl_xchacha20_poly1305_fmt.txt  boringssl_xchacha20_poly1305_tests_fmt.txt  pynacl_generated.json  pynacl_generated_with_rekey.json  ring_openssl.rsp
tests/test_generation/: generate_secret_stream_test_values.c  make_blake2b_kat.py  make_boringssl_chacha20_poly1305.py  make_boringssl_xchacha20_poly1305.py  make_nist_hmac.py  make_nist_sha512.py  make_poly1305_boringssl.py  make_wycheproof_chacha20_poly1305.py  pynacl_secretstream_test_vector.c
tests/xof/: mod.rs  official_cshake.rs
(+74 files in other folders)
